# maTrack

./: app.py  auth_manager.py  data_manager.py  database.py  init_db.py  pyproject.toml  utils.py
.streamlit/: config.toml
data/: expenses.csv  passengers.csv
